--- a/index.html
+++ b/index.html
@@ -29,6 +29,50 @@
           box-shadow: 0 0 0 0 rgba(255, 255, 255, 0);
         }
       }
+
+      /* Cinemagraph Steam Effect */
+      .steam-overlay {
+        position: absolute;
+        inset: 0;
+        pointer-events: none;
+        overflow: hidden;
+      }
+      .steam-overlay::before,
+      .steam-overlay::after {
+        content: '';
+        position: absolute;
+        bottom: 0;
+        left: 50%;
+        width: 200%;
+        height: 150%;
+        background: radial-gradient(circle, rgba(255,255,255,0.2) 0%, rgba(255,255,255,0) 70%);
+        border-radius: 50%;
+        opacity: 0;
+        animation: steam-rise 6s infinite linear;
+        transform-origin: bottom center;
+      }
+      .steam-overlay::after {
+        left: 40%;
+        animation-delay: 3s;
+        animation-duration: 7s;
+      }
+      @keyframes steam-rise {
+        0% {
+          transform: translateY(20%) scale(0.5) translateX(-50%);
+          opacity: 0;
+        }
+        20% {
+          opacity: 0.6;
+        }
+        80% {
+          transform: translateY(-80%) scale(1.2) translateX(-50%);
+          opacity: 0.2;
+        }
+        100% {
+          transform: translateY(-100%) scale(1.5) translateX(-50%);
+          opacity: 0;
+        }
+      }
     </style>
   <script type="importmap">
 {
@@ -37,12 +81,18 @@
     "react": "https://esm.sh/react@^19.2.4",
     "react-dom/": "https://esm.sh/react-dom@^19.2.4/",
     "lucide-react": "https://esm.sh/lucide-react@^0.563.0",
-    "@google/genai": "https://esm.sh/@google/genai@^1.38.0"
+    "@google/genai": "https://esm.sh/@google/genai@^1.38.0",
+    "firebase/app": "https://esm.sh/firebase@^10.12.3/app",
+    "firebase/firestore": "https://esm.sh/firebase@^10.12.3/firestore",
+    "firebase/auth": "https://esm.sh/firebase@^10.12.3/auth",
+    "firebase/functions": "https://esm.sh/firebase@^10.12.3/functions",
+    "firebase/": "https://esm.sh/firebase@^12.8.0/"
   }
 }
 </script>
 </head>
   <body class="bg-gray-50 text-gray-900 antialiased">
     <div id="root"></div>
+    <script type="module" src="/index.tsx"></script>
   </body>
 </html>
